--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.29.1",
     "prettier": "^2.4.0",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.2.0",
