--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prettier": "^2.4.0",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.4",
+    "react-css-theme-switcher": "^0.3.0",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.2.0",
@@ -25,7 +26,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build-deploy": "npm run build && gcloud app deploy -q"
   },
   "eslintConfig": {
     "extends": [
